# smarterr

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
errorset/: Cargo.toml  LICENSE  README.md
errorset/src/: lib.rs
errorset/tests/: test.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: lib.rs
tests/: gen.rs  gen_impl.rs  sample.rs  test.rs
