[package]
name = "smarterr"
version = "1.0.0"
authors = ["Mike Mozal"]
edition = "2021"

readme = "README.md"
description = "Smart error handling library"
documentation = "https://docs.rs/smarterr"
repository = "https://github.com/mozalmic/smarterr"

license = "Apache-2.0"

keywords = ["error", "smart", "library", "set"]

[lib]

[dependencies]
errorset = { version = "1.0.0", optional = true }

[dev-dependencies]

[features]
errorset = ["dep:errorset"]

[workspace]
exclude = ["errorset"]
