[package]
name = "smarterr"
version = "1.0.0"
authors = ["Mike Mozal"]
edition = "2021"

readme = "README.md"
description = "Smart error handling library"
documentation = "https://docs.rs/smarterr"
repository = "https://github.com/mozalmic/smarterr"

license = "Apache-2.0"

keywords = ["error", "smart", "library", "set"]

[lib]

[dependencies]
errorset = { version = "1.0.0", optional = true }
thiserror = { version = "1.0.63", optional = true }
anyhow = { version = "1.0.86", optional = true }

[dev-dependencies]
errorset = { version = "1.0.0" }

[features]
atomic_error = ["dep:thiserror", "dep:anyhow"]
errorset = ["dep:errorset", "atomic_error"]

[workspace]
exclude = ["errorset"]
