[package]
name = "errorset"
version = "1.0.6"
authors = ["Mike Mozal"]
edition = "2021"

description = "ErrorSet library"
documentation = "https://docs.rs/smarterr"
repository = "https://github.com/mozalmic/smarterr"

license = "Apache-2.0"

keywords = ["error", "set", "library"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6"
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
